@@ -6,8 +6,8 @@
 <P>
 <A HREF="/admin?op=add-printer"><IMG
 SRC="/images/button-add-printer.gif" ALT="Drucker hinzuf&uuml;gen" CLASS="button"></A>
-<A HREF="/admin?op=list-available-printers"><IMG
-SRC="/images/button-list-available-printers.gif"
+<A HREF="/admin?op=find-new-printers"><IMG
+SRC="/images/button-find-new-printers.gif"
 ALT="Verfügbare Drucker auflisten" CLASS="button"></A>
 <A HREF="/printers/"><IMG SRC="/images/button-manage-printers.gif"
 ALT="Drucker verwalten" CLASS="button"></A>
